--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jdom": "^1.0.11",
     "jquery": "^3.1.1",
     "matter-js": "^0.13.0",
+    "poly-decomp": "^0.2.1",
     "tsify": "^3.0.1"
   }
 }
