--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-mocha": "^4.0.1",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-tslint": "^8.0.0",
+    "gulp-typedoc": "^2.2.0",
     "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
     "jsdom": "^11.5.1",
